[gd_scene load_steps=8 format=3 uid="uid://cgrp3y0yu6ii6"]

[ext_resource type="Theme" uid="uid://co0uqk7ayhahb" path="res://Assets/UI/UI_Theme.tres" id="1_nu4sk"]
[ext_resource type="Script" uid="uid://bxschqgbqp1up" path="res://Source/Scripts/enemy_fight_ui.gd" id="1_tagqh"]
[ext_resource type="Texture2D" uid="uid://dxmfftr32spu0" path="res://Assets/UI/UI.png" id="2_nu4sk"]
[ext_resource type="Texture2D" uid="uid://c0gr5qwg340nt" path="res://Assets/Sprites/small_hp_bar.aseprite" id="3_tqtqm"]
[ext_resource type="Texture2D" uid="uid://8cdfkdymulcy" path="res://Assets/Sprites/small_hp_bar_filled.aseprite" id="4_h6ofk"]
[ext_resource type="Texture2D" uid="uid://cbn07b34tbqdx" path="res://Assets/Sprites/wandering_eye.aseprite" id="5_ysc2x"]
[ext_resource type="PackedScene" uid="uid://beya1cn0hkqsy" path="res://Source/UI/player_container.tscn" id="6_joeq7"]

[node name="EnemyFightUI" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_behavior_recursive = 1
theme = ExtResource("1_nu4sk")
color = Color(0.07450981, 0.078431375, 0.101960786, 1)
script = ExtResource("1_tagqh")

[node name="EnemyBox" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 31.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
texture = ExtResource("2_nu4sk")
region_rect = Rect2(168, 96, 87, 75)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="EnemyName" type="Label" parent="EnemyBox"]
layout_mode = 1
offset_left = 15.0
offset_top = 12.0
offset_right = 239.0
offset_bottom = 47.0
size_flags_vertical = 6
text = "Wandering Eye"

[node name="EnemyLevel" type="Label" parent="EnemyBox"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -90.0
offset_top = 15.0
offset_right = -14.0
offset_bottom = 47.0
grow_horizontal = 0
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.24578309, 0.5303088, 0.2432698, 1)
theme_override_font_sizes/font_size = 25
text = "LVL: 12"
horizontal_alignment = 1

[node name="HealthBar" type="TextureProgressBar" parent="EnemyBox"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -55.0
offset_right = 20.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(7.045, 4.675)
pivot_offset = Vector2(20, 3)
max_value = 20.0
value = 12.0
texture_under = ExtResource("3_tqtqm")
texture_progress = ExtResource("4_h6ofk")

[node name="TextHP" type="Label" parent="EnemyBox"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -93.0
offset_top = -40.0
offset_right = 93.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 6
theme_override_font_sizes/font_size = 25
text = "24/24 HP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemySprite" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 77.0
offset_top = 218.0
offset_right = 117.0
offset_bottom = 258.0
grow_horizontal = 2
scale = Vector2(4, 4)
pivot_offset = Vector2(20, 20)
texture = ExtResource("5_ysc2x")

[node name="PlayerContainer" parent="." instance=ExtResource("6_joeq7")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.0
offset_top = -137.0
offset_right = -27.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2

[node name="CommandUI" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -396.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_nu4sk")
region_rect = Rect2(168, 96, 87, 75)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="AttackButton" type="Button" parent="CommandUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -242.0
offset_top = 48.0
offset_right = -8.0
offset_bottom = 156.0
grow_horizontal = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 41
text = "Attack"

[node name="AttackButton2" type="Button" parent="CommandUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 8.0
offset_top = 48.0
offset_right = 242.0
offset_bottom = 156.0
grow_horizontal = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 41
text = "Block
"

[node name="CloseButton" type="Button" parent="CommandUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 51.0
offset_top = -74.0
offset_right = 241.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
text = "Flee"
